[project]
name = "python-template-repo"
version = "0.1.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 1
use_parentheses = true
line_length = 88
force_single_line = true

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]
line-length = 88
fix = true

